# gen/http/user/server/paths.go
@@ -1,0 +1,18 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the user service.
+//
+// Command:
+// $ goa gen github.com/sm43/goa-crud/design
+
+package server
+
+// CreateUserPath returns the URL path to the user service create HTTP endpoint.
+func CreateUserPath() string {
+	return "/user"
+}
+
+// ListUserPath returns the URL path to the user service list HTTP endpoint.
+func ListUserPath() string {
+	return "/users"
+}
